Closed Bug 748211 Opened 13 years ago Closed 13 years ago

getVertexAttrib should not be returning a value for the VERTEX_ATTRIB_ARRAY_POINTER pname

Categories

(Core :: Graphics: CanvasWebGL, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla15

People

(Reporter: bzbarsky, Assigned: bjacob)

References

Details

(Whiteboard: webgl-conformance)

Attachments

(1 file)

Per spec, at least. I'm not changing this code for the moment in bug 745897.
Thanks! The test does catch it. Also filed bug 753734 about Firefox's intolerable slowness at generating JS warnings, which shows here when the webgl.verbose preference is set to true.
Whiteboard: webgl-conformance webgl-test-needed → webgl-conformance
The JS warning slowness no longer affects WebGL warnings too much, as we now stop generating WebGL warnings after 32 per context.
Attached patch reject bad enumSplinter Review
Assignee: nobody → bjacob
Status: NEW → ASSIGNED
Attachment #628314 - Flags: review?(jgilbert)
Attachment #628314 - Flags: review?(jgilbert) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: