Bug 748211 - getVertexAttrib should reject the VERTEX_ATTRIB_ARRAY_POINTER pname - r=jgilbert